force-app/main/default/objects/Transaction_Platform_Event__e/Transaction_Platform_Event__e.object-meta.xml
<CustomObject>
    <label>Transaction Platform Event</label>
    <pluralLabel>Transaction Platform Events</pluralLabel>
</CustomObject>