force-app/main/default/objects/Transaction_Platform_Event__e/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>