force-app/main/default/objects/Transaction_Platform_Event__e/fields/Balance_Update__c.field-meta.xml
<CustomField>
    <fullName>Balance_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance Update?</label>
    <type>Checkbox</type>
</CustomField>