force-app/main/default/objects/Transaction_Platform_Event__e/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <label>Beneficiary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>