force-app/main/default/objects/Transaction_Platform_Event__e/fields/CC_Available_Balance__c.field-meta.xml
<CustomField>
    <fullName>CC_Available_Balance__c</fullName>
    <label>CC Available Balance2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>