force-app/main/default/objects/Transaction_Platform_Event__e/fields/Finance_Account__c.field-meta.xml
<CustomField>
    <fullName>Finance_Account__c</fullName>
    <label>Finance Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>