force-app/main/default/objects/Transaction_Platform_Event__e/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <label>Investment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>