force-app/main/default/objects/Transaction_Platform_Event__e/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <label>Payment Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>