force-app/main/default/objects/Transaction_Platform_Event__e/fields/Payment_Via__c.field-meta.xml
<CustomField>
    <fullName>Payment_Via__c</fullName>
    <label>Payment Via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>